[package]
name = "open_lords2"
version = "0.1.0"
authors = ["Jan Sipr <sipr.jan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.26.0-alpha6"
image = "*"
serde_json = "1.0.46"
serde = { version = "1.0.104", features = ["derive"] }
